Fix color contrast issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -1567,7 +1567,7 @@ body {
   }
 
   .skills-desktop {
-    background-color: #febf52;
+    background-color: #6F4701;
   }
 
   .lang-desktop h3,
